migrate from events to rxjs observables bug fixes
1.7.13 (3)

--- a/src/app/pages/group/groupchat/groupchat.page.scss
+++ b/src/app/pages/group/groupchat/groupchat.page.scss
@@ -679,6 +679,8 @@ app-groupchat {
 
   .program-name {
     position: absolute;
+    max-height: 28px;
+    overflow: hidden;
     bottom: 2%;
     left: 2%;
     font-size: 12px;
