--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -478,7 +478,7 @@
                   </div>
                 </ion-card-header>
                 <div class="program-type"><ion-badge color="button1">{{moment.resource['en-US'].value[0]}}</ion-badge></div>
-                <div class="program-name light">{{moment.matrix_string[0][0]}}</div>
+                <div class="program-name light">{{moment.calendar.title}}</div>
                 <ion-button class="remove-moment ion-no-padding ion-no-margin" (click)="removeMoment(i)" fill="clear" size="small">
                   <ion-icon name="close" color="secondary"></ion-icon>
                 </ion-button>
@@ -500,7 +500,7 @@
   <ion-toolbar id="expandable" *ngIf="moreOptions" class="ion-no-padding">
     <div class="moreoptions">
       <ion-slides class="program-slides" [options]="{slidesPerView: 3.5, grabCursor: true}">
-        <ion-slide class="program-slide" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : 20; index as i; trackBy: customTrackBy" [hidden]="!(calendarItem.moment?.resource && calendarItem.moment.resource.field === 'User Defined Activity' && calendarItem.moment.resource['en-US'].value[0] !== 'Onboarding Process')">
+        <ion-slide class="program-slide" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : 20; index as i; trackBy: customTrackBy" [hidden]="!((calendarItem.relationship ? (calendarItem.relationship === chatService.currentChatProps[this.propIndex].moment._id) : true) && calendarItem.moment?.resource && calendarItem.moment.resource.field === 'User Defined Activity' && calendarItem.moment.resource['en-US'].value[0] !== 'Onboarding Process')">
           <ion-card class="program-card" (click)="selectCalendarItem($event, calendarItem)" *ngIf="calendarItem.moment">
             <ion-card-header class="ion-no-padding">
               <div class="program-photo-container">
@@ -508,7 +508,7 @@
               </div>
             </ion-card-header>
             <div class="program-type"><ion-badge color="button1">{{calendarItem.moment.resource['en-US'].value[0]}}</ion-badge></div>
-            <div class="program-name light">{{calendarItem.moment.matrix_string[0][0]}}</div>
+            <div class="program-name light">{{calendarItem.title}}</div>
           </ion-card>
         </ion-slide>
         <ion-slide class="program-slide">
