--- a/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
+++ b/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
@@ -132,7 +132,7 @@
       <ion-row *ngIf="userHasSharedContact && isConnected && !isBlocked"><ion-col><ion-button expand='full' size="small" shape="round" color='warning' (click)="shareContactInfo()">Turn Off Sharing My Contact Info</ion-button></ion-col></ion-row>
       <ion-row *ngIf="!isBlocked"><ion-col><ion-button expand='full' size="small" shape="round" color='primary' (click)="inviteToGroup()">Invite to Group</ion-button></ion-col></ion-row>
       <!--<ion-row *ngIf="!isBlocked"><ion-col><ion-button expand='full' size="small" shape="round" color='primary' (click)="inviteToCommunity()">Invite to Community</ion-button></ion-col></ion-row>-->
-      <ion-row><ion-col><ion-button expand='full' size="small" shape="round" color='danger' (click)="reportUserAbuse($event)">Report {{recipient.first_name}}</ion-button></ion-col></ion-row>
+      <ion-row><ion-col><ion-button expand='full' size="small" shape="round" color='warning' (click)="reportUserAbuse($event)">Report {{recipient.first_name}}</ion-button></ion-col></ion-row>
     </div>
 
     <div style="margin-top: 5px;" *ngIf="userData.currentCommunityAdminStatus && manageMode">
