--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -157,7 +157,7 @@
                 </div>
               </div>
             </ion-list>
-            <p class="centered" style="text-align: center;">By tapping Next, you agree to our <a href="https://restvo.com/privacy-policy">Terms of Service and Privacy Policy</a>.</p>
+            <p class="centered" style="text-align: center;">By tapping Next, you agree to our <a href="https://restvo.com/privacy-policy.html">Terms of Service and Privacy Policy</a>.</p>
             <ion-row>
               <ion-col>
                 <ion-button expand="full" shape="round" color="primary" (click)="nextSlide()" [disabled]="!nameForm.valid" id="submit-name">Next</ion-button>
