--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -447,6 +447,7 @@ app-dashboard {
     //max-height: 200px;
     object-fit: contain;
     margin: 0 12px;
+    background-color: blue;
 
     // Added the slant pattern!
     .top-pattern {
