--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -439,8 +439,8 @@ app-dashboard {
   }
 
   .person-card {
-    max-width: 300px;
-    width: 80%;
+    // max-width: 300px;
+    // width: 80%;
     height: 100%;
     //max-height: 200px;
     object-fit: contain;
@@ -478,24 +478,38 @@ app-dashboard {
   }
 
   .person-content {
-    height: 75px;
-    overflow: scroll;
+    height: 100%;
+    // overflow: scroll;
     --background: var(--ion-color-light);
   }
+
+ #person-profile-card{
+   box-shadow: none;
+  width: 100%;
+ }
 
   .person-content-item {
     --background: transparent;
   }
 
   .person-content-left {
-    margin: 8px 12.5px 21px 0;
+    // margin: 8px 12.5px 21px 0;
     width: 40%;
-    height: 44px;
+    height: 100px;
     line-height: 100%;
+    padding: 10px;
+  }
+
+  .person-photo {
+    width: 80px;
+    height: 80px;
   }
 
   .person-name {
-    font-size: 14px;
+    font-size: 20px;
+    font-weight: 500;
+    // font-size: 14px;
+    margin-bottom: 8px;
   }
 
   .person-title {
@@ -509,15 +523,17 @@ app-dashboard {
   }
 
   .person-content-right {
-    padding-left: 12.5px;
-    margin: 10px 0 21px 0;
+    padding-left: 10px;
+    padding-top: 10px;
+    // margin: 10px 0 21px 0;
     width: 60%;
-    height: 42px;
+    height: 100%;
     //max-height: 72px;
-    line-height: 14px; /* Height / no. of lines to display */
+    line-height: 16px; /* Height / no. of lines to display */
     overflow: hidden;
     font-size: 12px;
     color: var(--ion-color-darkgrey);
+   
   }
 
   .section {
