port events listener into observables
1.7.14 (4)

--- a/src/app/pages/manage/development/development.page.html
+++ b/src/app/pages/manage/development/development.page.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-buttons class="ion-justify-content-center" margin-top>
+  <ion-buttons class="ion-justify-content-center ion-margin-top">
     <ion-button shape="round" fill="solid" color="primary" size="small" (click)="createActivity($event)">Create Sample Activity</ion-button>
   </ion-buttons>
   <ion-list>
